--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
     <script type="module" src="/src/main.tsx"></script>
     <script>
       if (typeof navigator.serviceWorker !== "undefined") {
-        navigator.serviceWorker.register("sw.js");
+        navigator.serviceWorker.register("/sw.js");
       }
     </script>
   </body>
