--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="icon/favicon.ico" />
+    <link
+      rel="alternate icon"
+      href="icon/16.png"
+      type="image/png"
+      sizes="16x16"
+    />
+    <link rel="apple-touch-icon" href="icon/256.png" sizes="256×256" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="apple-mobile-web-app-title" content="NextLevel" />
     <title>한국어 학습 플랫폼</title>
     <script type="module">
       import "https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate";
